<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Srikanth Basappa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@id/material_drawer_menu_default_group">
        <item
            android:id="@+id/drawer_action_discover"
            android:icon="@drawable/ic_discover"
            android:title="@string/action_discover"
            app:showAsAction="never" />
        <item
            android:id="@+id/drawer_action_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/action_favorite"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/md_menu_second_group">
        <item
            android:id="@+id/drawer_action_about"
            android:icon="@drawable/ic_info"
            android:title="@string/action_about"
            app:showAsAction="never" />
    </group>

</menu>