<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Srikanth Basappa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackgroundColor">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp" />

        <ProgressBar
            android:id="@+id/pb_bakelicious"
            style="@style/Bakelicious.ProgressBar"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_error_msg"
            style="@style/Bakelicious.ErrorTextView"
            android:text="@string/data_download_error"
            android:visibility="invisible" />

    </FrameLayout>
</layout>