...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sriky.bakelicious.custom.WrapContentViewPager
            android:id="@+id/vp_recipe_details"
            style="@style/WrapContentViewPager"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/activity_bakelicious_tablayout_margin_left"
            android:layout_marginStart="@dimen/activity_bakelicious_tablayout_margin_right"
            app:layout_constraintBottom_toTopOf="@+id/tl_recipe_details"
            app:layout_constraintEnd_toEndOf="parent"
...
